  * mongoc_uri_set_read_prefs_t
  * mongoc_uri_set_username
  * mongoc_uri_set_write_concern
  * mongoc_write_concern_is_acknowledged
  * mongoc_write_concern_is_valid
  * mongoc_write_concern_journal_is_set

mongoc_client_get_database_names no longer filters out a replica set member's
"local" database.

mongoc_client_get_gridfs now ensures the proper indexes on the files and chunks
collections.

mongo-c-driver 1.3.3
====================

It is my pleasure to announce MongoDB C Driver 1.3.3. This fixes a bug where
a slightly-oversized bulk write operation was not split into batches; instead,
it was sent whole to the server, which rejected it.

Peace,

  A. Jesse Jiryu Davis


mongo-c-driver 1.3.2
====================

It is my pleasure to announce MongoDB C Driver 1.3.2. This is a bugfix release:

  * A socket is properly discarded after a network error from a command.
  * mongoc_database_get_collection now copies the database's read preferences,
    read concern, and write concern, instead of copying the client's.
  * mongoc_cursor_t's private struct now allows a negative limit.

Thanks to everyone who contributed to this release.

  * A. Jesse Jiryu Davis
  * Jeremy Mikola
  * Hannes Magnusson

Peace,

  A. Jesse Jiryu Davis



mongo-c-driver 1.3.1
====================

It is my pleasure to announce MongoDB C Driver 1.3.1. This is a bugfix release:

  * mongoc_client_get_gridfs now copies the client's read preferences, read
    concern, and write concern to the newly created mongoc_gridfs_t. Before
    this fix, GridFS operations were always executed with the default config:
    data was read from the primary, with the read concern level "local", and
    written with write concern "acknowledged". Now, if you have configured any
    of these options on the mongoc_client_t, they are respected by the
    mongoc_gridfs_t.
  * CMakeLists.txt now includes and installs the pkg-config files.

Thanks to everyone who contributed to this release.

  * A. Jesse Jiryu Davis